--- a/_config.yml
+++ b/_config.yml
@@ -128,7 +128,7 @@ navigation_header:
   url: /
 - title: 研究内容
   url: /elements/
-- title: Publications
+- title: Publication
   url: /publ/
 - title: お仕事
   url: /categories/
