--- a/_config.yml
+++ b/_config.yml
@@ -127,7 +127,7 @@ navigation_header:
 - title: Home
   url: /
 - title: 研究内容
-  url: /elements/
+  url: /research/
 - title: Publication
   url: /publ/
 - title: お仕事
